# Golf_Lab_NM

./: .eslintrc.cjs  .prettierrc  Cargo.toml  README.md  app.js  debug_dump.js  debug_wind.js  extract_test_data.js  full_debug_output.txt  full_test_data.md  index.html  manifest.json  package.json  physics.js  physics_ultimate.js  style.css  sw.js  test_output.txt  test_output_chipping.txt  test_repor_chipping.md  test_report.md  test_report.txt  test_report_exhaustif.md  test_results.json  test_results_9trajectories.json  test_results_chipping.json  test_results_final.json  test_results_ultimate_v2.json  test_results_ultimate_v3.json  test_results_v4.json  test_results_v5.json  test_results_v6.json  test_results_v7.json  test_results_v8.json
.github/workflows/: deploy.yml
components/: modals.html
js/: chip_logic.js  physics_ultimate.js  putt_logic.js  putting_view_3d.js  swing_logic.js  ui_manager.js  wasm_loader.js
scripts/: build_wasm.ps1  generate_report.js
src/: lib.rs
src/html/: chip_ui.html  putt_ui.html  swing_ui.html
tests/: chipping.test.js  compare_physics.js  physics.test.js
