[package]
name = "golf_physics_core"
version = "0.1.0"
edition = "2021"
authors = ["NM - Golf Lab"]
description = "High-precision deterministic golf physics engine (RK4)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
serde_json = "1.0"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
